# cross-platform-rust-js-boilerplate

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json  webpack.config.js
.github/workflows/: ci.yml
common/: Cargo.toml
common/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
examples/node/: README.md  index.js  package-lock.json  package.json
examples/web/: README.md  index.html  index.js  package-lock.json  package.json
native/: Cargo.toml
native/src/: lib.rs
src/: common.ts  index.spec.ts  index_browser.ts  index_node.ts  native.ts  web.ts
web/: Cargo.toml
web/src/: lib.rs
