[package]
name = "core"
version = "0.1.0"
authors = ["Maximilian Alexander <max@ditto.live>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
futures = "0.3"
async-trait = "0.1.41"
wasm-bindgen = { version = "0.2", optional = true }

[features]
wasm = ["wasm-bindgen"]


