[package]
name = "core-native"
version = "0.1.0"
authors = ["Maximilian Alexander <max@ditto.live>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common" }
node-bindgen = { version = "4.0.0" }
async-trait = "0.1"
sled = "0.34"

[build-dependencies]
node-bindgen = { version = "4.0.0", features = ["build"] }
