[package]
name = "core-web"
version = "0.1.0"
authors = ["Maximilian Alexander <max@ditto.live>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common" }
web-sys = "0.3"
js-sys = "0.3"
futures = "0.3"
async-trait = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_log = "0.2"
log = "0.4"
tokio = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = [
    'web-sys/Window',
    'web-sys/IdbFactory',
    'web-sys/IdbOpenDbRequest',
    'web-sys/IdbDatabase',
    'web-sys/IdbTransaction',
    'web-sys/IdbTransactionMode',
    'web-sys/IdbObjectStore',
    'tokio/sync',
    'tokio/macros',
]
